--- a/Sokoban/Sokoban.CSharp.csproj
+++ b/Sokoban/Sokoban.CSharp.csproj
@@ -63,6 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\AI.cs" />
     <Compile Include="Assets\MyScripts\GenerateGrid.cs" />
     <Compile Include="Assets\PlayerController.cs" />
     <Compile Include="Assets\ZSmartTile\Classes\ZST_MapManager.cs" />
