Add graphs, states generator, moves check, to do search tree

--- a/Sokoban/Sokoban.CSharp.csproj
+++ b/Sokoban/Sokoban.CSharp.csproj
@@ -63,9 +63,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\AI.cs" />
+    <Compile Include="Assets\MyScripts\AI.cs" />
     <Compile Include="Assets\MyScripts\GenerateGrid.cs" />
-    <Compile Include="Assets\PlayerController.cs" />
+    <Compile Include="Assets\MyScripts\PlayerController.cs" />
     <Compile Include="Assets\ZSmartTile\Classes\ZST_MapManager.cs" />
     <Compile Include="Assets\ZSmartTile\Components\ZST_SmartTile.cs" />
     <Compile Include="Assets\ZSmartTile\Components\ZST_SnapToGrid.cs" />
